Make it optional to prefix user names with the name of the configuration that provided them

--- a/src/main/resources/GeoServerApplication.properties
+++ b/src/main/resources/GeoServerApplication.properties
@@ -8,6 +8,7 @@ DrupalAuthProviderPanel.databasePort=Port of Drupal database
 DrupalAuthProviderPanel.databaseName=Name of Drupal database
 DrupalAuthProviderPanel.databaseUser=User of Drupal database (need permission to access user and role tables)
 DrupalAuthProviderPanel.databasePassword=Password of Drupal database user
+DrupalAuthProviderPanel.usePrefix=Usernames are prefixed
 
 DrupalRoleServicePanel.short=Drupal
 DrupalRoleServicePanel.title=Drupal
@@ -23,3 +24,4 @@ DrupalUserGroupServicePanel.databasePort=Port of Drupal database
 DrupalUserGroupServicePanel.databaseName=Name of Drupal database
 DrupalUserGroupServicePanel.databaseUser=User of Drupal database (need permission to access user and role tables)
 DrupalUserGroupServicePanel.databasePassword=Password of Drupal database user
+DrupalUserGroupServicePanel.usePrefix=Prefix usernames
