--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@ This is an plugin for GeoServer and not part of it.</description>
 	<url>https://github.com/geops/geoserver-sec-drupal</url>
 	<properties>
 		<geoserver.version>2.2</geoserver.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<build>
 		<resources>
