--- a/.project
+++ b/.project
@@ -4,7 +4,11 @@
   <comment>Bind GeoServer to Drupal instance by letting GeoServer access Drupal&apos;s database to verify permissions.
 
 This is an plugin for GeoServer and not part of it. NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
-  <projects/>
+  <projects>
+    <project>main</project>
+    <project>ows</project>
+    <project>platform</project>
+  </projects>
   <buildSpec>
     <buildCommand>
       <name>org.eclipse.jdt.core.javabuilder</name>
