set corect name for field in DrupalAuthProviderPanel [refs #3090098]

--- a/src/main/resources/GeoServerApplication.properties
+++ b/src/main/resources/GeoServerApplication.properties
@@ -1,6 +1,6 @@
 DrupalAuthProviderPanel.short=Drupal
 DrupalAuthProviderPanel.title=Drupal
-DrupalAuthProviderPanel.name=drupal
+DrupalAuthProviderPanel.name=Name
 DrupalAuthProviderPanel.description=Drupal authentication
 DrupalAuthProviderPanel.drupalSettings=Drupal Settings
 DrupalAuthProviderPanel.databaseHost=Hostname of Drupal database
