translate class names on the Geoserver "Users, Groups, and Roles" page [refs #4030018]

--- a/src/main/resources/GeoServerApplication.properties
+++ b/src/main/resources/GeoServerApplication.properties
@@ -25,3 +25,7 @@ DrupalUserGroupServicePanel.databaseName=Name of Drupal database
 DrupalUserGroupServicePanel.databaseUser=User of Drupal database (need permission to access user and role tables)
 DrupalUserGroupServicePanel.databasePassword=Password of Drupal database user
 DrupalUserGroupServicePanel.usePrefix=Prefix usernames
+
+
+org.cartaro.geoserver.security.drupal.DrupalUserGroupService.title=Drupal user/group service
+org.cartaro.geoserver.security.drupal.DrupalRoleService.title=Drupal role service
