translate class name of DrupalAuthenticationProvider [refs #4030018]

--- a/src/main/resources/GeoServerApplication.properties
+++ b/src/main/resources/GeoServerApplication.properties
@@ -29,3 +29,4 @@ DrupalUserGroupServicePanel.usePrefix=Prefix usernames
 
 org.cartaro.geoserver.security.drupal.DrupalUserGroupService.title=Drupal user/group service
 org.cartaro.geoserver.security.drupal.DrupalRoleService.title=Drupal role service
+org.cartaro.geoserver.security.drupal.DrupalAuthenticationProvider.title=Drupal authentication
