--- a/src/main/resources/GeoServerApplication.properties
+++ b/src/main/resources/GeoServerApplication.properties
@@ -9,6 +9,9 @@ DrupalAuthProviderPanel.databaseName=Name of Drupal database
 DrupalAuthProviderPanel.databaseUser=User of Drupal database (need permission to access user and role tables)
 DrupalAuthProviderPanel.databasePassword=Password of Drupal database user
 DrupalAuthProviderPanel.usePrefix=Usernames are prefixed
+DrupalAuthProviderPanel.drupalExtensionInfo=Drupal Extension information 
+DrupalAuthProviderPanel.drupalExtensionGitVersion=Git Revision
+DrupalAuthProviderPanel.drupalExtensionVersion=Version
 
 DrupalRoleServicePanel.short=Drupal
 DrupalRoleServicePanel.title=Drupal
