translate usePrefix explanation and use also in DrupalUserGroupServicePanel [refs #3090099]

--- a/src/main/resources/GeoServerApplication.properties
+++ b/src/main/resources/GeoServerApplication.properties
@@ -9,6 +9,7 @@ DrupalAuthProviderPanel.databaseName=Name of Drupal database
 DrupalAuthProviderPanel.databaseUser=User of Drupal database (need permission to access user and role tables)
 DrupalAuthProviderPanel.databasePassword=Password of Drupal database user
 DrupalAuthProviderPanel.usePrefix=Usernames are prefixed
+DrupalAuthProviderPanel.usePrefixExplanation=When GeoServer is shared by multiple Cartaro instances it is necessary to enable this option to make Drupal instances distinguishable in GeoServer.
 DrupalAuthProviderPanel.drupalExtensionInfo=Drupal Extension information 
 DrupalAuthProviderPanel.drupalExtensionGitVersion=Git Revision
 DrupalAuthProviderPanel.drupalExtensionVersion=Version
@@ -28,6 +29,7 @@ DrupalUserGroupServicePanel.databaseName=Name of Drupal database
 DrupalUserGroupServicePanel.databaseUser=User of Drupal database (need permission to access user and role tables)
 DrupalUserGroupServicePanel.databasePassword=Password of Drupal database user
 DrupalUserGroupServicePanel.usePrefix=Prefix usernames
+DrupalUserGroupServicePanel.usePrefixExplanation=When GeoServer is shared by multiple Cartaro instances it is necessary to enable this option to make Drupal instances distinguishable in GeoServer.
 
 
 org.cartaro.geoserver.security.drupal.DrupalUserGroupService.title=Drupal user/group service
