--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@ This is an plugin for GeoServer and not part of it.</description>
 	<url>https://github.com/geops/geoserver-sec-drupal</url>
 
 	<properties>
-		<geoserver.version>2.4.0</geoserver.version>
+		<geoserver.version>2.4.8</geoserver.version>
 		<wicket.version>1.4.12</wicket.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -72,7 +72,7 @@ This is an plugin for GeoServer and not part of it.</description>
 		
 		<dependency>
 			<groupId>org.geoserver.web</groupId>
-			<artifactId>web-security</artifactId>
+			<artifactId>web-sec-core</artifactId>
 			<version>${geoserver.version}</version>
 		</dependency>
 		<dependency>
@@ -101,13 +101,18 @@ This is an plugin for GeoServer and not part of it.</description>
 		</dependency>
 	</dependencies>
 	<repositories>
-		<repository>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<id>opengeo</id>
-			<name>OpenGeo Maven Repository</name>
-			<url>http://repo.opengeo.org</url>
-		</repository>
+        <repository>
+            <id>boundless</id>
+            <name>Boundless Maven Repository</name>
+            <url>http://repo.boundlessgeo.com/main</url>
+        </repository>
+        <repository>
+            <id>osgeo</id>
+            <name>Open Source Geospatial Foundation Repository</name>
+            <url>http://download.osgeo.org/webdav/geotools/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
 	</repositories>
 </project>
